Add Urbanly subway map project to CV and portfolio

--- a/cv/en/main_body.tex
+++ b/cv/en/main_body.tex
@@ -12,13 +12,22 @@ design, state ownership, and incremental, correctness-first development on Linux
 
 \section*{Skills}
 \begin{itemize}
-  \item \textbf{Languages:} C, Go, Python, Haskell, Prolog, Java (light), JavaScript, HTML/CSS
+  \item \textbf{Languages:} C, Go, TypeScript, Python, Haskell, Prolog, Java (light), JavaScript, HTML/CSS
   \item \textbf{Systems / Concepts:} UNIX domain sockets, TCP fundamentals, \texttt{select()}, event-driven I/O, protocol framing, client-server architectures, explicit state ownership
-  \item \textbf{Tools / Misc:} Linux, Bash, Git, Valgrind, GDB, QEMU, PostgreSQL, CURL, basic scripting and automation, security wargames (OverTheWire)
+  \item \textbf{Tools / Misc:} Linux, Bash, Git, Valgrind, GDB, QEMU, PostgreSQL, CURL, basic scripting and automation, security wargames (OverTheWire), GeoJSON
   \item \textbf{Areas:} Algorithms, data structures, systems programming, OOP, functional \& logic programming
 \end{itemize}
 
 \section*{Projects}
+\noindent \textbf{Geospatial Data Visualization — Buenos Aires Subway} \hfill \textit{2026} \\
+\href{https://github.com/Yarthax23/urbanly-subte-map}{GitHub Repository}
+\begin{itemize}
+  \item Web-based map visualization built with MapLibre GL JS using public datasets from the City of Buenos Aires.
+  \item Designed an offline data transformation pipeline to normalize heterogeneous CSV and GeoJSON sources.
+  \item Chose a segment-based rendering model to preserve original geometries and avoid incorrect topological assumptions.
+  \item Emphasis on correctness, explicit data assumptions, and reproducible transformations.
+\end{itemize}
+
 \noindent \textbf{Event-Driven Chat Server in C} \hfill \textit{2025} \\
 \href{https://github.com/Yarthax23/unix-chat-server}{GitHub Repository}
 \begin{itemize}
