--- a/cv/es/main_body.tex
+++ b/cv/es/main_body.tex
@@ -12,13 +12,22 @@ ownership del estado y desarrollo incremental priorizando corrección sobre opti
 
 \section*{Habilidades}
 \begin{itemize}
-  \item \textbf{Lenguajes:} C, Go, Python, Haskell, Prolog, Java (básico), JavaScript, HTML/CSS
+  \item \textbf{Lenguajes:} C, Go, TypeScript, Python, Haskell, Prolog, Java (básico), JavaScript, HTML/CSS
   \item \textbf{Sistemas / Conceptos:} Sockets UNIX, fundamentos de TCP, \texttt{select()}, I/O event-driven, framing de protocolos, arquitecturas cliente-servidor, ownership explícito del estado
-  \item \textbf{Herramientas / Misceláneo:} Linux, Bash, Git, Valgrind, GDB, QEMU, PostgreSQL, CURL, scripting y automatización básica, wargames de seguridad (OverTheWire)
+  \item \textbf{Herramientas / Misceláneo:} Linux, Bash, Git, Valgrind, GDB, QEMU, PostgreSQL, CURL, scripting y automatización básica, wargames de seguridad (OverTheWire), GeoJSON
   \item \textbf{Áreas:} Algoritmos, estructuras de datos, programación de sistemas, POO, programación funcional y lógica
 \end{itemize}
 
 \section*{Proyectos}
+\noindent \textbf{Visualización Geoespacial — Subte de Buenos Aires} \hfill \textit{2026} \\
+\href{https://github.com/Yarthax23/urbanly-subte-map}{Repositorio en GitHub}
+\begin{itemize}
+  \item Visualización web basada en mapas utilizando MapLibre GL JS y datasets públicos del Gobierno de la Ciudad de Buenos Aires.
+  \item Diseño de un pipeline offline de transformación de datos para normalizar fuentes heterogéneas en CSV y GeoJSON.
+  \item Modelo de renderizado por segmentos para preservar la geometría original y evitar supuestos topológicos incorrectos.
+  \item Énfasis en corrección, supuestos explícitos y transformaciones reproducibles.
+\end{itemize}
+
 \noindent \textbf{Servidor de Chat Event-Driven en C} \hfill \textit{2025} \\
 \href{https://github.com/Yarthax23/unix-chat-server}{GitHub Repository}
 \begin{itemize}
